[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "sqlalchemy>=2.0.36",
    "werkzeug>=3.1.1",
    "discord-py>=2.4.0",
    "requests>=2.32.3",
    "pyopenssl>=24.2.1",
    "cryptography>=41.0.0",
]
